--- a/compose.yml
+++ b/compose.yml
@@ -1,5 +1,5 @@
 volumes:
-  gravitale:
+  gravipipe:
     driver: local
 
 services:
@@ -9,11 +9,11 @@ services:
     ports:
       - "27017:27017"
     environment:
-      MONGO_INITDB_ROOT_DATABASE: gravitale
+      MONGO_INITDB_ROOT_DATABASE: gravipipe
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: password
     volumes:
-      - gravitale:/data/db
+      - gravipipe:/data/db
     restart: always
     healthcheck:
       test: ["CMD", "mongosh", "-u", "admin", "-p", "password", "--eval", "db.runCommand('ping').ok"]
@@ -21,18 +21,3 @@ services:
       timeout: 5s
       retries: 5
       start_period: 10s
-  mongodb-ui:
-    image: mongo-express:1.0.2
-    container_name: mongodb-ui
-    ports:
-      - "8081:8081"
-    environment:
-      ME_CONFIG_MONGODB_SERVER: mongodb
-      ME_CONFIG_MONGODB_PORT: 27017
-      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
-      ME_CONFIG_MONGODB_ADMINPASSWORD: password
-      ME_CONFIG_BASICAUTH_USERNAME: express
-      ME_CONFIG_BASICAUTH_PASSWORD: express
-    depends_on:
-      - mongodb
-    restart: always
